--- a/tagsdescriptions/package.json
+++ b/tagsdescriptions/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-confirm-alert": "^2.6.1",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.3.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-simple-tree-menu": "^1.1.15",
