--- a/servidor/package.json
+++ b/servidor/package.json
@@ -22,6 +22,7 @@
     "html-entities": "^1.3.1",
     "html-pdf": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.12.2",
+    "mssql": "^6.3.1"
   }
 }
