--- a/servidor/package.json
+++ b/servidor/package.json
@@ -26,7 +26,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.9",
     "mssql": "^6.3.1",
+    "multer": "^1.4.3",
     "net-snmp": "^3.5.4",
-    "node-opc-da": "^1.0.7"
+    "node-opc-da": "^1.0.7",
+    "read-excel-file": "^5.2.20",
+    "shortid": "^2.2.16"
   }
 }
