--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,11 @@
 servidor/node_modules
 servidor/node_modules/
 
+servidor\node_modules
+servidor\node_modules\
+
 tagsdescriptions/node_modules
 tagsdescriptions/node_modules/
+
+tagsdescriptions\node_modules
+tagsdescriptions\node_modules\
