correccion de bobadas

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ tagsdescriptions/node_modules/
 
 tagsdescriptions\node_modules
 tagsdescriptions\node_modules\
+tagsdescriptions/node_modules/.bin/acorn
