--- a/tagsdescriptions/package.json
+++ b/tagsdescriptions/package.json
@@ -8,12 +8,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@tinymce/tinymce-react": "^3.5.0",
+    "@types/googlemaps":"^3.0.0",
+    "@types/markerclustererplus":"^2.1.29",
+    "@types/react":"^16.13.1",
     "axios": "^0.19.2",
     "bnpm": "^1.0.0",
     "bootstrap": "^4.4.1",
     "browser-image-compression": "^2.0.0",
     "docx": "^5.2.1",
     "fs": "0.0.1-security",
+    "google-map-react": "^2.2.0",
     "install": "^0.13.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
