--- a/tagsdescriptions/package.json
+++ b/tagsdescriptions/package.json
@@ -8,16 +8,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@tinymce/tinymce-react": "^3.5.0",
-    "@types/googlemaps":"^3.0.0",
-    "@types/markerclustererplus":"^2.1.29",
-    "@types/react":"^16.13.1",
     "axios": "^0.19.2",
     "bnpm": "^1.0.0",
     "bootstrap": "^4.4.1",
     "browser-image-compression": "^2.0.0",
     "docx": "^5.2.1",
     "fs": "0.0.1-security",
-    "google-map-react": "^2.2.0",
     "install": "^0.13.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -25,13 +21,14 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^14.2.2",
     "react-files": "^2.4.8",
-    "react-flow-renderer": "^4.7.0",
+    "react-flow-renderer": "^10.3.12",
     "react-html-parser": "^2.0.2",
+    "react-image-lightbox": "^5.1.4",
     "react-paginate": "^6.3.2",
+    "react-qr-code": "^2.0.8",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-simple-tree-menu": "^1.1.15",
-    "shortid": "^2.2.16",
     "suneditor-react": "^2.10.1"
   },
   "scripts": {
