--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ tagsdescriptions/node_modules/
 tagsdescriptions\node_modules
 tagsdescriptions\node_modules\
 tagsdescriptions/node_modules/.bin/acorn
+tagsdescriptions/node_modules/.bin/ansi-html
