--- a/servidor/variables.env
+++ b/servidor/variables.env
@@ -1,4 +1,4 @@
-DB_MONGO= mongodb://localhost:27017/TagsdescriptorsDB
+DB_MONGO= mongodb://127.0.0.1:27017/TagsdescriptorsDB
 DB_MONGO_CLOUD= mongodb+srv://UserDBMongo:Atlasando22@cluster0.qt6di.mongodb.net/DCSDoc
 CERTIFICADO=semillacertificado
-TIMEOUTUSUARIO=7200
+TIMEOUTUSUARIO=7200 
