--- a/tagsdescriptions/package.json
+++ b/tagsdescriptions/package.json
@@ -10,7 +10,7 @@
     "@tinymce/tinymce-react": "^3.5.0",
     "axios": "^0.19.2",
     "bnpm": "^1.0.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.2",
     "browser-image-compression": "^2.0.0",
     "docx": "^5.2.1",
     "fs": "0.0.1-security",
@@ -23,7 +23,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^14.2.2",
     "react-files": "^2.4.8",
-    "react-flow-renderer": "^10.3.17",
+    "react-flow-renderer": "^9.7.3",
     "react-html-parser": "^2.0.2",
     "react-image-lightbox": "^5.1.4",
     "react-paginate": "^6.3.2",
@@ -32,6 +32,7 @@
     "react-scripts": "3.4.1",
     "react-simple-tree-menu": "^1.1.15",
     "react-viewerjs": "^0.1.9",
+    "reactstrap": "^9.2.0",
     "suneditor-react": "^2.10.1",
     "viewerjs": "^1.11.0"
   },
