Comunicación con Active DIrectory

--- a/servidor/variables.env
+++ b/servidor/variables.env
@@ -2,3 +2,9 @@ DB_MONGO= mongodb://127.0.0.1:27017/TagsdescriptorsDB
 DB_MONGO_CLOUD= mongodb+srv://UserDBMongo:Atlasando22@cluster0.qt6di.mongodb.net/DCSDoc
 CERTIFICADO=semillacertificado
 TIMEOUTUSUARIO=7200 
+
+# Active Directory Configuration
+AD_URL=ldap://192.168.1.102
+AD_BASE_DN=dc=prd,dc=local
+AD_USERNAME=administrator@prd.local
+AD_PASSWORD=Admin.1234  
